@@ -1,6 +1,6 @@
 Release 1.0.15
 
-More unit tests, minor bug fixes.
+More unit tests, major bug fixes.
 
 Release 1.0.14
 
